fix: page overflow

--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@
 }
 
 .my-profile-information {
-    min-height: 9vh;
+    min-height: 70px;
     background-color: #eaeaea;
     display: flex;
     justify-content: space-between;
@@ -35,7 +35,7 @@
 }
 
 .notification {
-    min-height: 10vh;
+    height: 70px;
     background-color: #8edafc;
     display: flex;
     align-items: center;
@@ -56,10 +56,10 @@
 }
 
 .search-bar {
-    min-height: 8vh;
+    height: 50px;
     display: flex;
     align-items: center;
-    padding: 5px;
+    padding: 20px 10px;
 }
 
 .icon-input {
@@ -82,7 +82,7 @@
 }
 
 .column-users {
-    height: calc(100% - 28vh);
+    height: calc(100% - 190px);
     overflow-y: auto;
 }
 
@@ -122,7 +122,7 @@
 }
 
 .user-information {
-    min-height: 9vh;
+    min-height: 70px;
     background-color: #eaeaea;
     display: flex;
     justify-content: space-between;
@@ -132,7 +132,7 @@
 
 /* right main */
 .chat-messages {
-    height: calc(100% - 18vh);
+    height: calc(100% - 140px);
     background-image: url("../img/wallpaperflare.com_wallpaper(7).jpg");
     background-size: cover;
     overflow-y: auto;
@@ -194,7 +194,7 @@ span {
 /* right bottom */
 .chat-input {
     background-color: #f3eeea;
-    min-height: 9vh;
+    height: 70px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -209,7 +209,6 @@ span {
     padding: 10px;
     border-radius: 5px;
     border: none;
-    height: 6vh;
 }
 
 /* icons color & margin */
@@ -245,3 +244,4 @@ span {
     font-size: 1.2rem;
 }
 
+  
